<resources>
    <string name="app_name">FootballClubApp</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="adres_email">Adres email</string>
    <string name="has_o">Hasło</string>
    <string name="zapomnia_e_has_o">Zapomniałeś hasło?</string>
    <string name="logowanie">Logowanie</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="zarejestruj_si_w_aplikacji">Zarejestruj się w aplikacji</string>
    <string name="masz_ju_konto_zaloguj_si">Masz już konto? Zaloguj się</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="EmailJestWymagany">Email jest wymagany</string>
    <string name="com">Adres email jest wymagany</string>
    <string name="comm">Adres email jest wymagany</string>
    <string name="comm2">Hasło jest wymagane</string>
    <string name="comm3">Długość hasła musi być dłuższa niż 6 znaków</string>
    <string name="comm4">Proszę czekać...</string>
    <string name="comm5">Logowanie udane</string>
    <string name="comm6">Logowanie nieudane</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="comm7">Wymagany adres email</string>
    <string name="comm8">Hasło jest wymagane</string>
    <string name="aktualno_ci">AKTUALNOŚCI</string>
    <string name="tabela">TABELA</string>
    <string name="terminarz">TERMINARZ</string>
    <string name="dru_yna">DRUŻYNA</string>
    <string name="wyjazdy">WYJAZDY</string>
    <string name="czat">CZAT</string>
    <string name="logout">WYLOGUJ</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="imi">Imię</string>
    <string name="wiadomo">Wiadomość</string>
    <string name="wy_lij">WYśLIJ</string>
    <string name="welcome">Witamy na czacie LKS Żuławy!</string>
</resources>