<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/logowanie"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/login_email"
        android:hint="@string/adres_email"
        android:layout_centerInParent="true"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:hint="@string/has_o"
        android:layout_below="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/login_password"
        android:layout_alignParentRight="true"
        android:text="@string/zapomnia_e_has_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_btn"
        android:background="@color/red"
        android:textColor="@color/teal_700"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/zaloguj"
        android:layout_below="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/need_an_account"
        android:text="@string/zarejestruj_si_w_aplikacji"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>