<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background1"
    tools:context=".login_register.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/rejestracja"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/adres_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_password"
        android:inputType="textPassword"
        android:hint="@string/has_o"
        android:layout_below="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FF5252"
        android:text="@string/zarejestruj"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/already_have_and_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/masz_ju_konto_zaloguj_si" />

</RelativeLayout>