<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityChat">

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#009688"
        android:weightSum="10"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/sendET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/imi"
            android:textColor="@color/black">
        </EditText>

        <EditText
            android:id="@+id/msgET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/wiadomo"
            android:textColor="@color/black">
        </EditText>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wy_lij"
            android:layout_weight="1"
            android:background="#FF5252"/>

    </LinearLayout>

</RelativeLayout>